[package]
name = "bajun-runtime"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
# General
hex-literal = { workspace = true, optional = true }
log         = { workspace = true }
serde       = { workspace = true, features = [ "derive" ], optional = true }
smallvec    = { workspace = true }

# Parity codec
parity-scale-codec = { workspace = true }
scale-info         = { workspace = true, features = [ "derive" ] }

# Substrate
frame-benchmarking                         = { workspace = true, optional = true }
frame-executive                            = { workspace = true }
frame-support                              = { workspace = true }
frame-system                               = { workspace = true }
frame-system-benchmarking                  = { workspace = true, optional = true }
frame-system-rpc-runtime-api               = { workspace = true }
frame-try-runtime                          = { workspace = true, optional = true }
pallet-aura                                = { workspace = true }
pallet-authorship                          = { workspace = true }
pallet-balances                            = { workspace = true }
pallet-collective                          = { workspace = true }
pallet-identity                            = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-membership                          = { workspace = true }
pallet-multisig                            = { workspace = true }
pallet-nfts                                = { workspace = true }
pallet-preimage                            = { workspace = true }
pallet-proxy                               = { workspace = true }
pallet-scheduler                           = { workspace = true }
pallet-session                             = { workspace = true }
pallet-sudo                                = { workspace = true }
pallet-timestamp                           = { workspace = true }
pallet-transaction-payment                 = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury                            = { workspace = true }
pallet-utility                             = { workspace = true }
sp-api                                     = { workspace = true }
sp-block-builder                           = { workspace = true }
sp-consensus-aura                          = { workspace = true }
sp-core                                    = { workspace = true }
sp-inherents                               = { workspace = true }
sp-io                                      = { workspace = true }
sp-offchain                                = { workspace = true }
sp-runtime                                 = { workspace = true }
sp-session                                 = { workspace = true }
sp-std                                     = { workspace = true }
sp-storage                                 = { workspace = true }
sp-transaction-pool                        = { workspace = true }
sp-version                                 = { workspace = true }

# Polkadot
pallet-xcm                    = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common       = { workspace = true }
staging-xcm                   = { workspace = true }
staging-xcm-builder           = { workspace = true }
staging-xcm-executor          = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext             = { workspace = true }
cumulus-pallet-dmp-queue            = { workspace = true }
cumulus-pallet-parachain-system     = { workspace = true, features = [ "parameterized-consensus-hook" ] }
cumulus-pallet-session-benchmarking = { workspace = true }
cumulus-pallet-xcm                  = { workspace = true }
cumulus-pallet-xcmp-queue           = { workspace = true }
cumulus-primitives-aura             = { workspace = true }
cumulus-primitives-core             = { workspace = true }
cumulus-primitives-timestamp        = { workspace = true }
cumulus-primitives-utility          = { workspace = true }
pallet-collator-selection           = { workspace = true }
parachain-info                      = { workspace = true }

# ORML
orml-vesting = { workspace = true }

# Ajuna
ajuna-primitives                          = { workspace = true }
# Ajuna Pallets
pallet-ajuna-awesome-avatars              = { workspace = true }
pallet-ajuna-awesome-avatars-benchmarking = { path = "../../pallets/ajuna-awesome-avatars/benchmarking", default-features = false, optional = true }
pallet-ajuna-nft-transfer                 = { workspace = true }

[features]
default = [ "std" ]
std = [
    "parity-scale-codec/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "ajuna-primitives/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-aura/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "orml-vesting/std",
    "pallet-ajuna-awesome-avatars/std",
    "pallet-ajuna-awesome-avatars-benchmarking?/std",
    "pallet-ajuna-nft-transfer/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-collator-selection/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-nfts/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "polkadot-parachain-primitives/std",
    "polkadot-runtime-common/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "staging-xcm/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
]

runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "staging-xcm-builder/runtime-benchmarks",
    "cumulus-pallet-session-benchmarking/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "pallet-ajuna-awesome-avatars-benchmarking/runtime-benchmarks",
    "pallet-ajuna-nft-transfer/runtime-benchmarks",
]

try-runtime = [
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "orml-vesting/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-collator-selection/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-nfts/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-xcm/try-runtime",
    "parachain-info/try-runtime",
    "pallet-ajuna-awesome-avatars/try-runtime",
    "pallet-ajuna-nft-transfer/try-runtime",
]
