[package]
description = "The Ajuna Network Node Runtime"
name        = "ajuna-solo-runtime"
publish     = false

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
# General
hex-literal = { workspace = true, optional = true }
log         = { workspace = true }

# Parity codec
parity-scale-codec = { workspace = true }
scale-info         = { workspace = true, features = [ "derive" ] }

# Substrate
frame-benchmarking                         = { workspace = true, optional = true }
frame-executive                            = { workspace = true }
frame-support                              = { workspace = true }
frame-system                               = { workspace = true }
frame-system-benchmarking                  = { workspace = true, optional = true }
frame-system-rpc-runtime-api               = { workspace = true }
pallet-asset-tx-payment                    = { workspace = true }
pallet-assets                              = { workspace = true }
pallet-aura                                = { workspace = true }
pallet-balances                            = { workspace = true }
pallet-collective                          = { workspace = true }
pallet-democracy                           = { workspace = true }
pallet-grandpa                             = { workspace = true }
pallet-identity                            = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-membership                          = { workspace = true }
pallet-multisig                            = { workspace = true }
pallet-nfts                                = { workspace = true }
pallet-preimage                            = { workspace = true }
pallet-proxy                               = { workspace = true }
pallet-scheduler                           = { workspace = true }
pallet-sudo                                = { workspace = true }
pallet-timestamp                           = { workspace = true }
pallet-transaction-payment                 = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury                            = { workspace = true }
pallet-utility                             = { workspace = true }
sp-api                                     = { workspace = true }
sp-block-builder                           = { workspace = true }
sp-consensus-aura                          = { workspace = true }
sp-core                                    = { workspace = true }
sp-inherents                               = { workspace = true }
sp-offchain                                = { workspace = true }
sp-runtime                                 = { workspace = true }
sp-session                                 = { workspace = true }
sp-std                                     = { workspace = true }
sp-storage                                 = { workspace = true }
sp-transaction-pool                        = { workspace = true }
sp-version                                 = { workspace = true }

# ORML
orml-vesting = { workspace = true }

# Ajuna
ajuna-primitives             = { workspace = true }
# Ajuna Pallets
pallet-ajuna-awesome-avatars = { workspace = true }
pallet-ajuna-nft-staking     = { workspace = true }
pallet-ajuna-nft-transfer    = { workspace = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
    "ajuna-primitives/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "pallet-ajuna-nft-staking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-asset-tx-payment/std",
    "pallet-assets/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-nfts/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-scheduler/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "orml-vesting/std",
    "ajuna-primitives/std",
    "pallet-ajuna-awesome-avatars/std",
    "pallet-ajuna-nft-staking/std",
    "pallet-ajuna-nft-transfer/std",
]
