[package]
description = "Ajuna Network pallet used for NFT Staking benchmarking"
name        = "pallet-ajuna-nft-staking-benchmarking"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# General (wasm)
log = { workspace = true }

# Substrate (wasm)
frame-benchmarking                         = { workspace = true, optional = true }
frame-support                              = { workspace = true }
frame-system                               = { workspace = true }
pallet-balances                            = { workspace = true }
pallet-nfts                                = { workspace = true }
parity-scale-codec                         = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info                                 = { workspace = true, features = [ "derive" ] }
sp-io                                      = { workspace = true }
sp-runtime                                 = { workspace = true }
sp-std                                     = { workspace = true }

# Ajuna
pallet-ajuna-nft-staking = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
    "frame-benchmarking",
    "pallet-nfts/runtime-benchmarks",
    "pallet-ajuna-nft-staking/runtime-benchmarks",
]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-io/std",
    "pallet-balances/std",
    "pallet-nfts/std",
    "pallet-ajuna-nft-staking/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
]
try-runtime = [ "frame-support/try-runtime" ]
